# m328p

./: CMakeLists.txt
avr-libs/4digdisplay/: 4digdisplay.c  4digdisplay.h  TM74HC595Display.cpp.bk  TM74HC595Display.h.bk
avr-libs/4digdisplay/examples/TM74HC595Display/: TM74HC595Display.ino
avr-libs/d4tube/: d4tube.c  d4tube.h
avr-libs/eeprom/: eeprom.h
avr-libs/i2c/: i2c.h
avr-libs/light_ws/: light_ws2812.h  ws2812_config.h
avr-libs/nrf24l01p/: nrf24.h
avr-libs/spi/: spi.h
avr-libs/tsl2561/: tsl2561.h
include/: gateway.h  nrfcmd.h  resolver.h  resolver_uart.h  service_i2c.h  service_nrf.h  service_temp.h  utils.h
lib/i2c/: i2c.h
lib/nrf24l01p/: nrf24.h  nrf24_fsm.h  nrf24l01p.h
lib/spi/: spi.h
lib/usi/: usi.h  usi_gpio.h  usi_i2c.c  usi_i2c.h  usi_twi.c  usi_twi.h
src/: gateway.c  main.c  resolver.c  resolver_uart.c  utils.c
